# GW2Nexus-Clears-Tracker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  gw2.http
.github/: nexus-release.json
scripts/: build-release.sh  deploy-to-gw2.sh  embed_assets.py
src/: entry.cpp
src/core/: AccountRegistry.cpp  AccountRegistry.h  AppState.cpp  AppState.h  Branding.h  EncounterVisibilityFilter.cpp  EncounterVisibilityFilter.h  MumbleIdentity.cpp  MumbleIdentity.h  PanelVisibility.cpp  PanelVisibility.h  RaidVisibilityStore.cpp  RaidVisibilityStore.h  RegisteredAccount.h  SettingsStore.cpp  SettingsStore.h  StorageKeyUtil.h  StrikeVisibilityStore.cpp  StrikeVisibilityStore.h  Types.cpp  Types.h
src/data/: ClearsTrackerManifest.cpp  ClearsTrackerManifest.h  DailyBountyData.cpp  DailyBountyData.h  DungeonData.cpp  DungeonData.h  FractalMapData.cpp  FractalMapData.h  InstabilitiesData.cpp  InstabilitiesData.h  RaidData.cpp  RaidData.h  StaticDataLoader.cpp  StaticDataLoader.h  StrikeData.cpp  StrikeData.h
src/services/: ApiPollService.cpp  ApiPollService.h  DailyBountyProgressService.cpp  DailyBountyProgressService.h  DailyBountyService.cpp  DailyBountyService.h  DatAssetIconService.cpp  DatAssetIconService.h  DungeonsClearsService.cpp  DungeonsClearsService.h  FractalMapWatcherService.cpp  FractalMapWatcherService.h  FractalPersistance.cpp  FractalPersistance.h  FractalRotationService.cpp  FractalRotationService.h  Gw2ApiClient.cpp  Gw2ApiClient.h  HttpClient.cpp  HttpClient.h  MapWatcherService.cpp  MapWatcherService.h  MentorAchievementProgressService.cpp  MentorAchievementProgressService.h  PriorityRotationService.cpp  PriorityRotationService.h  RaidClearsService.cpp  RaidClearsService.h  ResetsWatcher.cpp  ResetsWatcher.h  StrikeClearsService.cpp  StrikeClearsService.h  StrikePersistance.cpp  StrikePersistance.h  WeeklyBountyEncountersService.cpp  WeeklyBountyEncountersService.h  WeeklyModifierService.cpp  WeeklyModifierService.h
src/ui/: ContentLogoService.cpp  ContentLogoService.h  DungeonsPanel.cpp  DungeonsPanel.h  EncounterSelectionPanel.cpp  EncounterSelectionPanel.h  EncounterTooltip.cpp  EncounterTooltip.h  FractalCmTooltip.cpp  FractalCmTooltip.h  FractalsPanel.cpp  FractalsPanel.h  GridLayout.cpp  GridLayout.h  GridMaskService.cpp  GridMaskService.h  GridRenderer.cpp  GridRenderer.h  LabelCustomizationPanel.cpp  LabelCustomizationPanel.h  MentorProgressPopupService.cpp  MentorProgressPopupService.h  OptionsCommon.cpp  OptionsCommon.h  OptionsDungeonsTab.cpp  OptionsFractalsTab.cpp  OptionsGeneralTab.cpp  OptionsPanel.cpp  OptionsPanel.h  OptionsPanelAppearance.cpp  OptionsPanelAppearance.h  OptionsRaidsTab.cpp  OptionsStrikesTab.cpp  OptionsTextureService.cpp  OptionsTextureService.h  OptionsUiKit.cpp  OptionsUiKit.h  OverlayPanel.cpp  OverlayPanel.h  PanelAnchor.cpp  (+10 more)
